--- a/waifu_recommendation_system.ipynb
+++ b/waifu_recommendation_system.ipynb
@@ -6,7 +6,7 @@
       "name": "waifu-recommendation-system",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNTl4/7XqymsB+1v3ryoCDU",
+      "authorship_tag": "ABX9TyPY0w/QY9RbWXDH3NfrQJLW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
     {
       "cell_type": "code",
       "source": [
-        "waifus=pd.read_csv('/content/sample_data/pokewaifuset.csv')\n",
+        "waifus=pd.read_csv('pokewaifuset.csv')\n",
         "waifus=waifus.pivot_table(columns=\"user\", index=\"waifu_pokemon\", values=\"rating\")\n",
         "waifus"
       ],
@@ -52,9 +52,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 394
         },
-        "outputId": "cc77d7cf-7f4d-4081-c5a0-0243018be8d1"
+        "outputId": "fdaf6f87-7a4c-4a03-af84-071e916dbdb8"
       },
-      "execution_count": 27,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -75,7 +75,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-3dd2c9a0-9085-4215-8c19-5b40e78c336b\">\n",
+              "  <div id=\"df-989f51ee-6df1-4534-ba73-37ca905e9164\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -170,7 +170,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3dd2c9a0-9085-4215-8c19-5b40e78c336b')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-989f51ee-6df1-4534-ba73-37ca905e9164')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -221,12 +221,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-3dd2c9a0-9085-4215-8c19-5b40e78c336b button.colab-df-convert');\n",
+              "          document.querySelector('#df-989f51ee-6df1-4534-ba73-37ca905e9164 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-3dd2c9a0-9085-4215-8c19-5b40e78c336b');\n",
+              "          const element = document.querySelector('#df-989f51ee-6df1-4534-ba73-37ca905e9164');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -249,7 +249,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 82
         }
       ]
     },
@@ -257,44 +257,35 @@
       "cell_type": "code",
       "source": [
         "from sklearn.neighbors import NearestNeighbors\n",
-        "model = NearestNeighbors(algorithm=\"brute\")\n",
-        "model.fit(waifus)"
+        "model = NearestNeighbors()\n",
+        "model.fit(waifus.values, y=None)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "cmKa2gl_yw5l",
-        "outputId": "2b3b5b01-98ba-4bf8-c89b-f05b82abbe98"
+        "outputId": "7add284a-bea0-4daf-de50-19cbeef72cda"
       },
-      "execution_count": 28,
+      "execution_count": 105,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "NearestNeighbors(algorithm='brute')"
+              "NearestNeighbors()"
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 105
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### **predict what will happen if I choose gardevoir_waifu**\n"
-      ],
-      "metadata": {
-        "id": "qmo-_CLZCvk2"
-      }
     },
     {
       "cell_type": "code",
       "source": [
         "gardevoir = waifus.iloc[3,:].values.reshape(1, -1)\n",
-        "distance, suggestions = model.kneighbors(gardevoir)\n",
+        "suggestions = model.kneighbors(gardevoir, return_distance=False)\n",
         "\n",
         "for suggestion in suggestions:\n",
         "  waifus_recommended = waifus.index[suggestion]\n",
@@ -306,9 +297,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Sj0DrC7YCinr",
-        "outputId": "219b00a0-a62d-4a80-cc95-1d55eb85c969"
+        "outputId": "782b5587-03fe-4f2e-ee81-27b1410fc7b1"
       },
-      "execution_count": 46,
+      "execution_count": 111,
       "outputs": [
         {
           "output_type": "stream",
