--- a/waifu_recommendation_system.ipynb
+++ b/waifu_recommendation_system.ipynb
@@ -6,7 +6,7 @@
       "name": "waifu-recommendation-system",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPY0w/QY9RbWXDH3NfrQJLW",
+      "authorship_tag": "ABX9TyNi2gmU9MwImUQ8L4ODlkEv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,11 +50,11 @@
         "id": "jed1xEmvvFnc",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 394
+          "height": 323
         },
-        "outputId": "fdaf6f87-7a4c-4a03-af84-071e916dbdb8"
+        "outputId": "6f59b5c9-9b20-42e0-e8ab-07885a6d9c7b"
       },
-      "execution_count": 82,
+      "execution_count": 166,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -75,7 +75,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-989f51ee-6df1-4534-ba73-37ca905e9164\">\n",
+              "  <div id=\"df-4ee23575-668c-4ca5-975a-8340a1e3b22e\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -170,7 +170,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-989f51ee-6df1-4534-ba73-37ca905e9164')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4ee23575-668c-4ca5-975a-8340a1e3b22e')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -221,12 +221,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-989f51ee-6df1-4534-ba73-37ca905e9164 button.colab-df-convert');\n",
+              "          document.querySelector('#df-4ee23575-668c-4ca5-975a-8340a1e3b22e button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-989f51ee-6df1-4534-ba73-37ca905e9164');\n",
+              "          const element = document.querySelector('#df-4ee23575-668c-4ca5-975a-8340a1e3b22e');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -249,7 +249,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 82
+          "execution_count": 166
         }
       ]
     },
@@ -257,17 +257,18 @@
       "cell_type": "code",
       "source": [
         "from sklearn.neighbors import NearestNeighbors\n",
+        "\n",
         "model = NearestNeighbors()\n",
-        "model.fit(waifus.values, y=None)"
+        "model.fit(waifus.values)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "cmKa2gl_yw5l",
-        "outputId": "7add284a-bea0-4daf-de50-19cbeef72cda"
+        "outputId": "721ab234-0572-47b8-950e-124efdd03aba"
       },
-      "execution_count": 105,
+      "execution_count": 200,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -277,40 +278,60 @@
             ]
           },
           "metadata": {},
-          "execution_count": 105
+          "execution_count": 200
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "gardevoir = waifus.iloc[3,:].values.reshape(1, -1)\n",
-        "suggestions = model.kneighbors(gardevoir, return_distance=False)\n",
+        "def predict_from(waifu_choosed, number_of_predicts = 3):\n",
+        "  def search_index_of_waifu(waifu_name_choosed):\n",
+        "    for index, waifu_name in enumerate(waifus.index):\n",
+        "      if waifu_name == waifu_name_choosed:\n",
+        "        return index\n",
+        "    raise Exception('No waifu detected.')\n",
         "\n",
-        "for suggestion in suggestions:\n",
-        "  waifus_recommended = waifus.index[suggestion]\n",
-        "  for waifu in waifus_recommended:\n",
-        "    print(waifu)"
+        "  index_waifu_choosed = search_index_of_waifu(waifu_choosed)\n",
+        "  waifu_values = waifus.iloc[index_waifu_choosed,:].values.reshape(1, -1)\n",
+        "  suggestions = model.kneighbors(waifu_values, number_of_predicts+1, return_distance=False)\n",
+        "  suggestions_to_return = []\n",
+        "  for suggestion in suggestions[0]:\n",
+        "    if index_waifu_choosed == suggestion:\n",
+        "      continue\n",
+        "    suggestions_to_return.append(waifus.index[suggestion])\n",
+        "  \n",
+        "  return suggestions_to_return"
+      ],
+      "metadata": {
+        "id": "Sj0DrC7YCinr"
+      },
+      "execution_count": 270,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predict_from('gardevoir_waifu')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Sj0DrC7YCinr",
-        "outputId": "782b5587-03fe-4f2e-ee81-27b1410fc7b1"
+        "id": "H2xG76bklm9i",
+        "outputId": "3f1e0bcb-304d-453b-9c37-c2b05e8519a0"
       },
-      "execution_count": 111,
+      "execution_count": 271,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "gardevoir_waifu\n",
-            "roserade_waifu\n",
-            "pikachu_waifu\n",
-            "victribel_waifu\n",
-            "squirtle_waifu\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['roserade_waifu', 'pikachu_waifu', 'victribel_waifu']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 271
         }
       ]
     }
