--- a/waifu_recommendation_system.ipynb
+++ b/waifu_recommendation_system.ipynb
@@ -6,7 +6,7 @@
       "name": "waifu-recommendation-system",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNi2gmU9MwImUQ8L4ODlkEv",
+      "authorship_tag": "ABX9TyPVfupSep99t7JtvA9Nc1hH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 7,
       "metadata": {
         "id": "2UBvim2Gt7sY"
       },
@@ -44,17 +44,18 @@
       "source": [
         "waifus=pd.read_csv('pokewaifuset.csv')\n",
         "waifus=waifus.pivot_table(columns=\"user\", index=\"waifu_pokemon\", values=\"rating\")\n",
+        "waifus.fillna(0, inplace=True)\n",
         "waifus"
       ],
       "metadata": {
         "id": "jed1xEmvvFnc",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 323
+          "height": 394
         },
-        "outputId": "6f59b5c9-9b20-42e0-e8ab-07885a6d9c7b"
+        "outputId": "29c1778b-9e27-4460-8a49-0c48c1d1750c"
       },
-      "execution_count": 166,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -75,7 +76,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-4ee23575-668c-4ca5-975a-8340a1e3b22e\">\n",
+              "  <div id=\"df-fb440355-1a72-417e-b3a3-c07bd8b1a681\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -170,7 +171,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4ee23575-668c-4ca5-975a-8340a1e3b22e')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fb440355-1a72-417e-b3a3-c07bd8b1a681')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -221,12 +222,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-4ee23575-668c-4ca5-975a-8340a1e3b22e button.colab-df-convert');\n",
+              "          document.querySelector('#df-fb440355-1a72-417e-b3a3-c07bd8b1a681 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-4ee23575-668c-4ca5-975a-8340a1e3b22e');\n",
+              "          const element = document.querySelector('#df-fb440355-1a72-417e-b3a3-c07bd8b1a681');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -249,7 +250,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 166
+          "execution_count": 32
         }
       ]
     },
@@ -266,9 +267,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cmKa2gl_yw5l",
-        "outputId": "721ab234-0572-47b8-950e-124efdd03aba"
+        "outputId": "a4a96e5d-747c-4b8c-92e9-64082c8408b1"
       },
-      "execution_count": 200,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -278,7 +279,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 200
+          "execution_count": 36
         }
       ]
     },
@@ -306,7 +307,7 @@
       "metadata": {
         "id": "Sj0DrC7YCinr"
       },
-      "execution_count": 270,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -319,9 +320,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "H2xG76bklm9i",
-        "outputId": "3f1e0bcb-304d-453b-9c37-c2b05e8519a0"
+        "outputId": "d2042d23-eab7-4dc0-ca1e-2b40c40fad84"
       },
-      "execution_count": 271,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -331,7 +332,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 271
+          "execution_count": 38
         }
       ]
     }
