system without library

--- a/waifu_recommendation_system.ipynb
+++ b/waifu_recommendation_system.ipynb
@@ -6,7 +6,7 @@
       "name": "waifu-recommendation-system",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPVfupSep99t7JtvA9Nc1hH",
+      "authorship_tag": "ABX9TyPMPiFUoY/tVfsk+yEJ+/Bz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,32 +30,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
-      "metadata": {
-        "id": "2UBvim2Gt7sY"
-      },
-      "outputs": [],
       "source": [
-        "import pandas as pd"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "import pandas as pd\n",
+        "\n",
         "waifus=pd.read_csv('pokewaifuset.csv')\n",
         "waifus=waifus.pivot_table(columns=\"user\", index=\"waifu_pokemon\", values=\"rating\")\n",
         "waifus.fillna(0, inplace=True)\n",
         "waifus"
       ],
       "metadata": {
-        "id": "jed1xEmvvFnc",
+        "id": "Sj0DrC7YCinr",
+        "outputId": "e6d937a1-a045-4073-ba39-5e5e07dc727d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 394
-        },
-        "outputId": "29c1778b-9e27-4460-8a49-0c48c1d1750c"
+        }
       },
-      "execution_count": 32,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -76,7 +67,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-fb440355-1a72-417e-b3a3-c07bd8b1a681\">\n",
+              "  <div id=\"df-297456ef-0e78-488e-852e-af122b463cf2\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -171,7 +162,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fb440355-1a72-417e-b3a3-c07bd8b1a681')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-297456ef-0e78-488e-852e-af122b463cf2')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -222,12 +213,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-fb440355-1a72-417e-b3a3-c07bd8b1a681 button.colab-df-convert');\n",
+              "          document.querySelector('#df-297456ef-0e78-488e-852e-af122b463cf2 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-fb440355-1a72-417e-b3a3-c07bd8b1a681');\n",
+              "          const element = document.querySelector('#df-297456ef-0e78-488e-852e-af122b463cf2');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -250,43 +241,33 @@
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 19
         }
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### with library"
+      ],
+      "metadata": {
+        "id": "Eq-BJXWG_9x9"
+      }
+    },
+    {
       "cell_type": "code",
+      "execution_count": 18,
+      "metadata": {
+        "id": "2UBvim2Gt7sY"
+      },
+      "outputs": [],
       "source": [
         "from sklearn.neighbors import NearestNeighbors\n",
         "\n",
-        "model = NearestNeighbors()\n",
-        "model.fit(waifus.values)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "cmKa2gl_yw5l",
-        "outputId": "a4a96e5d-747c-4b8c-92e9-64082c8408b1"
-      },
-      "execution_count": 36,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "NearestNeighbors()"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 36
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def predict_from(waifu_choosed, number_of_predicts = 3):\n",
+        "model_of_library = NearestNeighbors()\n",
+        "model_of_library.fit(waifus.values)\n",
+        "\n",
+        "def predict_from_model_of_library(waifu_choosed, number_of_predicts = 3):\n",
         "  def search_index_of_waifu(waifu_name_choosed):\n",
         "    for index, waifu_name in enumerate(waifus.index):\n",
         "      if waifu_name == waifu_name_choosed:\n",
@@ -295,7 +276,7 @@
         "\n",
         "  index_waifu_choosed = search_index_of_waifu(waifu_choosed)\n",
         "  waifu_values = waifus.iloc[index_waifu_choosed,:].values.reshape(1, -1)\n",
-        "  suggestions = model.kneighbors(waifu_values, number_of_predicts+1, return_distance=False)\n",
+        "  suggestions = model_of_library.kneighbors(waifu_values, number_of_predicts+1, return_distance=False)\n",
         "  suggestions_to_return = []\n",
         "  for suggestion in suggestions[0]:\n",
         "    if index_waifu_choosed == suggestion:\n",
@@ -303,12 +284,7 @@
         "    suggestions_to_return.append(waifus.index[suggestion])\n",
         "  \n",
         "  return suggestions_to_return"
-      ],
-      "metadata": {
-        "id": "Sj0DrC7YCinr"
-      },
-      "execution_count": 37,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -316,13 +292,13 @@
         "predict_from('gardevoir_waifu')"
       ],
       "metadata": {
+        "id": "fbf2kppeBh4Y",
+        "outputId": "2f78ae40-812c-403e-d963-2aad5a24f87d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "H2xG76bklm9i",
-        "outputId": "d2042d23-eab7-4dc0-ca1e-2b40c40fad84"
+        }
       },
-      "execution_count": 38,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -332,7 +308,117 @@
             ]
           },
           "metadata": {},
-          "execution_count": 38
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### no library"
+      ],
+      "metadata": {
+        "id": "2x4joBZFArVb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "\n",
+        "def get_euclidian_distance(vector_one, vector_two):\n",
+        "  result = 0\n",
+        "  for index in range(len(vector_one)):\n",
+        "    result += math.pow(vector_one[index]-vector_two[index], 2)\n",
+        "  return math.sqrt(result)\n",
+        "\n",
+        "def get_manhattan_distance(vector_one , vector_two):\n",
+        "  result = 0\n",
+        "  for index in range(len(vector_one)):\n",
+        "    result += abs(vector_one[index]-vector_two[index])\n",
+        "  return result\n",
+        "\n",
+        "def get_supremum_distance(vector_one, vector_two):\n",
+        "  values = []\n",
+        "  for index in range(len(vector_one)):\n",
+        "    values.append(abs(vector_one[index]-vector_two[index]))\n",
+        "  return max(values)\n",
+        "\n",
+        "def get_minkowski_distance(vector_one, vector_two, p : float = 2):\n",
+        "  metrics = {'1': get_manhattan_distance,\n",
+        "               '2': get_euclidian_distance, \n",
+        "               'inf': get_supremum_distance}\n",
+        "  for key in metrics:\n",
+        "    p = str(p)\n",
+        "    if key == p:\n",
+        "      return metrics[p](vector_one, vector_two)\n",
+        "  return None\n",
+        "\n",
+        "class MyKNearestNeighbors():\n",
+        "  def training(self, X):\n",
+        "    self.X = X\n",
+        " \n",
+        "  def get_knearest_neighbors(self, X, number_of_predicts : int):\n",
+        "    distances_and_values = []\n",
+        "    for index, vector in enumerate(self.X):\n",
+        "      for value in X:\n",
+        "        distance = get_minkowski_distance(vector, value)\n",
+        "        distances_and_values.append({'distance' : distance, \n",
+        "                          'value' : vector, 'index' : index})\n",
+        "    result = sorted(distances_and_values, key=lambda d: d['distance'])\n",
+        "    return result[:number_of_predicts]\n",
+        "\n",
+        "my_model = MyKNearestNeighbors()\n",
+        "my_model.training(waifus.values)\n",
+        "\n",
+        "def predict_from_my_library(waifu_choosed, number_of_predicts = 3):\n",
+        "  def search_index_of_waifu(waifu_name_choosed):\n",
+        "    for index, waifu_name in enumerate(waifus.index):\n",
+        "      if waifu_name == waifu_name_choosed:\n",
+        "        return index\n",
+        "    raise Exception('No waifu detected.')\n",
+        "\n",
+        "  index_waifu_choosed = search_index_of_waifu(waifu_choosed)\n",
+        "  waifu_values = waifus.iloc[index_waifu_choosed,:].values.reshape(1, -1)\n",
+        "  suggestions = my_model.get_knearest_neighbors(waifu_values, number_of_predicts+1)\n",
+        "  suggestions_to_return = []\n",
+        "  for suggestion in suggestions:\n",
+        "    if index_waifu_choosed == suggestion['index']:\n",
+        "      continue\n",
+        "    waifu_to_return = waifus.index[suggestion['index']]\n",
+        "    suggestions_to_return.append(waifu_to_return)\n",
+        "  \n",
+        "  return suggestions_to_return"
+      ],
+      "metadata": {
+        "id": "pYPUAZXLAvzi"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "  predict_from('gardevoir_waifu', 3)"
+      ],
+      "metadata": {
+        "id": "-F5RVp1aBNEH",
+        "outputId": "c047229f-f0a3-4162-c078-d623042ba324",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['roserade_waifu', 'pikachu_waifu', 'victribel_waifu']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
         }
       ]
     }
