--- a/waifu_recommendation_system.ipynb
+++ b/waifu_recommendation_system.ipynb
@@ -6,7 +6,7 @@
       "name": "waifu-recommendation-system",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPMPiFUoY/tVfsk+yEJ+/Bz",
+      "authorship_tag": "ABX9TyP5MOtX3s6n84HSbjOxFOtz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,11 +40,11 @@
       ],
       "metadata": {
         "id": "Sj0DrC7YCinr",
-        "outputId": "e6d937a1-a045-4073-ba39-5e5e07dc727d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 394
-        }
+        },
+        "outputId": "e6d937a1-a045-4073-ba39-5e5e07dc727d"
       },
       "execution_count": 19,
       "outputs": [
@@ -256,7 +256,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 23,
       "metadata": {
         "id": "2UBvim2Gt7sY"
       },
@@ -289,16 +289,16 @@
     {
       "cell_type": "code",
       "source": [
-        "predict_from('gardevoir_waifu')"
+        "predict_from_model_of_library('gardevoir_waifu')"
       ],
       "metadata": {
-        "id": "fbf2kppeBh4Y",
-        "outputId": "2f78ae40-812c-403e-d963-2aad5a24f87d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fbf2kppeBh4Y",
+        "outputId": "fcd195b2-9bc0-40f0-8039-939c30d9086b"
       },
-      "execution_count": 22,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -308,7 +308,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 24
         }
       ]
     },
@@ -358,7 +358,7 @@
         "  def training(self, X):\n",
         "    self.X = X\n",
         " \n",
-        "  def get_knearest_neighbors(self, X, number_of_predicts : int):\n",
+        "  def get_knearest_neighbors(self, X, number_of_predicts : int = 3):\n",
         "    distances_and_values = []\n",
         "    for index, vector in enumerate(self.X):\n",
         "      for value in X:\n",
@@ -393,22 +393,22 @@
       "metadata": {
         "id": "pYPUAZXLAvzi"
       },
-      "execution_count": 20,
+      "execution_count": 27,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "  predict_from('gardevoir_waifu', 3)"
+        "  predict_from_my_library('gardevoir_waifu')"
       ],
       "metadata": {
-        "id": "-F5RVp1aBNEH",
-        "outputId": "c047229f-f0a3-4162-c078-d623042ba324",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-F5RVp1aBNEH",
+        "outputId": "6fe32e07-7e2b-4409-f77c-4312cbc0bbfb"
       },
-      "execution_count": 21,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -418,7 +418,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 28
         }
       ]
     }
