--- a/waifu_recommendation_system.ipynb
+++ b/waifu_recommendation_system.ipynb
@@ -6,7 +6,7 @@
       "name": "waifu-recommendation-system",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP5MOtX3s6n84HSbjOxFOtz",
+      "authorship_tag": "ABX9TyOn9ip+Vc8EnCwdJYDprjlF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -256,7 +256,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 30,
       "metadata": {
         "id": "2UBvim2Gt7sY"
       },
@@ -275,8 +275,8 @@
         "    raise Exception('No waifu detected.')\n",
         "\n",
         "  index_waifu_choosed = search_index_of_waifu(waifu_choosed)\n",
-        "  waifu_values = waifus.iloc[index_waifu_choosed,:].values.reshape(1, -1)\n",
-        "  suggestions = model_of_library.kneighbors(waifu_values, number_of_predicts+1, return_distance=False)\n",
+        "  waifu_value = waifus.iloc[index_waifu_choosed,:].values.reshape(1, -1)\n",
+        "  suggestions = model_of_library.kneighbors(waifu_value, number_of_predicts+1, return_distance=False)\n",
         "  suggestions_to_return = []\n",
         "  for suggestion in suggestions[0]:\n",
         "    if index_waifu_choosed == suggestion:\n",
@@ -379,8 +379,8 @@
         "    raise Exception('No waifu detected.')\n",
         "\n",
         "  index_waifu_choosed = search_index_of_waifu(waifu_choosed)\n",
-        "  waifu_values = waifus.iloc[index_waifu_choosed,:].values.reshape(1, -1)\n",
-        "  suggestions = my_model.get_knearest_neighbors(waifu_values, number_of_predicts+1)\n",
+        "  waifu_value = waifus.iloc[index_waifu_choosed,:].values.reshape(1, -1)\n",
+        "  suggestions = my_model.get_knearest_neighbors(waifu_value, number_of_predicts+1)\n",
         "  suggestions_to_return = []\n",
         "  for suggestion in suggestions:\n",
         "    if index_waifu_choosed == suggestion['index']:\n",
@@ -393,7 +393,7 @@
       "metadata": {
         "id": "pYPUAZXLAvzi"
       },
-      "execution_count": 27,
+      "execution_count": 29,
       "outputs": []
     },
     {
