--- a/waifu_recommendation_system.ipynb
+++ b/waifu_recommendation_system.ipynb
@@ -6,7 +6,7 @@
       "name": "waifu-recommendation-system",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOn9ip+Vc8EnCwdJYDprjlF",
+      "authorship_tag": "ABX9TyPps8BzdbWIC8jV4aniRoyL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -355,7 +355,7 @@
         "  return None\n",
         "\n",
         "class MyKNearestNeighbors():\n",
-        "  def training(self, X):\n",
+        "  def fit(self, X):\n",
         "    self.X = X\n",
         " \n",
         "  def get_knearest_neighbors(self, X, number_of_predicts : int = 3):\n",
@@ -369,7 +369,7 @@
         "    return result[:number_of_predicts]\n",
         "\n",
         "my_model = MyKNearestNeighbors()\n",
-        "my_model.training(waifus.values)\n",
+        "my_model.fit(waifus.values)\n",
         "\n",
         "def predict_from_my_library(waifu_choosed, number_of_predicts = 3):\n",
         "  def search_index_of_waifu(waifu_name_choosed):\n",
@@ -393,7 +393,7 @@
       "metadata": {
         "id": "pYPUAZXLAvzi"
       },
-      "execution_count": 29,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -419,6 +419,51 @@
           },
           "metadata": {},
           "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Comparasion"
+      ],
+      "metadata": {
+        "id": "2ehOMKSaFNa-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('meu resultado:\\n')\n",
+        "for suggestion in my_model.get_knearest_neighbors([[4,10,3]], 3):\n",
+        "  print(suggestion)\n",
+        "\n",
+        "print('\\nresultado da lib:\\n')\n",
+        "print(model_of_library.kneighbors([[4,10,3]], 3))"
+      ],
+      "metadata": {
+        "id": "AWUTGG7fC3BV",
+        "outputId": "7aa30a6e-cb14-4c86-b16f-b1b9248e4baf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "meu resultado:\n",
+            "\n",
+            "{'distance': 0.0, 'value': array([ 4, 10,  3]), 'index': 1}\n",
+            "{'distance': 1.4142135623730951, 'value': array([4, 9, 2]), 'index': 7}\n",
+            "{'distance': 2.0, 'value': array([ 6, 10,  3]), 'index': 0}\n",
+            "\n",
+            "resultado da lib:\n",
+            "\n",
+            "(array([[0.        , 1.41421356, 2.        ]]), array([[1, 7, 2]]))\n"
+          ]
         }
       ]
     }
